# SIEM_Windows_11

./: .env.example  .gitignore  CHANGELOG.md  COMMIT_GUIDE.md  LICENSE  README.md  config.yaml  implementation_plan.md  pyproject.toml  requirements.txt  scan_ports.py  siem_consola.py  verify_siem.py  vuln_hp.py
siem/: __init__.py  config.py  event_processor.py  log_manager.py  models.py  notifier.py
