[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siem-windows-11"
version = "4.0.0"
description = "Lightweight personal SIEM for Windows 11 with real-time event monitoring, Telegram alerts, CVE scoring and vulnerability classification"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Lucas Villagra", url = "https://lucas18062025.github.io/Portafolio/" }
]
keywords = [
    "siem",
    "cybersecurity",
    "windows-security",
    "blue-team",
    "event-monitoring",
    "telegram-bot",
    "nvd",
    "cve",
    "nmap",
    "vulnerability-scanner",
    "security-monitoring",
    "windows-event-log",
    "cvss",
    "homelab",
    "red-team"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]
dependencies = [
    "pywin32>=306",
    "python-telegram-bot>=20.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "python-nmap>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://lucas18062025.github.io/Portafolio/"
Repository = "https://github.com/Lucas18062025/SIEM_Windows_11"
"Bug Tracker" = "https://github.com/Lucas18062025/SIEM_Windows_11/issues"
Changelog = "https://github.com/Lucas18062025/SIEM_Windows_11/blob/main/CHANGELOG.md"

[project.scripts]
siem = "siem_consola:main"

# ── Ruff (linter moderno — reemplaza flake8 + isort) ──────────────
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ── Mypy ──────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
